# mandlebrot

./: .gitignore  Cargo.toml  Makefile  README.md  bacon.toml  index.html  install-deps.sh
.github/workflows/: static.yml
src/: arbitrary_num.rs  lib.rs  matrix.rs  util.rs
src/shader/: mod.rs  shader.frag  shader.vert
src/viewport/: keyboard.rs  mod.rs  pointer.rs  wheel.rs  window.rs
